th/css/style.css
/*--------------------------------------- Universal Styles -----------------------------------------*/

body {
	background: #ffffff;
	font-family: 'Helvetica', 'Arial', sans-serif;
	font-style: normal;
	font-weight: 400;

}
/*---------------------------------------
    Typography              
-----------------------------------------*/
h1 {
	font-size: 40px;
	letter-spacing: 2px;
	font-weight: 700;
}

h2 {
  font-size: 30px;
	font-weight: 600;
}

h3 {
	font-weight: 700;
}

h4 { 
	font-size: 22px;
}

h5 {
	letter-spacing: 1px;
	padding-top: 10px;
}

p {
	color: #808080;
	font-size: 16px;
	line-height: 24px;
}

a {
  text-decoration: none !important;
  outline: none;
}


/*---------------------------------------
    General               
-----------------------------------------*/
.section-title {
  margin-bottom: 32px;
}

#products, #plsPerks, footer {
  text-align: center;
}

#overview h3, #products h3, #partners h3, #ptnrTypes h3 {
    padding-bottom: 12px;
}

hr {
	color: #00aaff;
	border: 2px solid;
	border-radius: 3px;
	width: 20%;
}

b {
	color: #00aaff;
	font-weight: 600;
}

.btn {
	background: transparent;
	border: 2px solid #ffffff;
	border-radius: 0px;
	color: #ffffff;
	font-weight: 600;
	letter-spacing: 1px;
	font-size: 16px;
	-webkit-transition: all 0.4s ease-in-out;
	transition: all 0.4s ease-in-out;
	border-radius: 100px;
}

.btn-main {
	color: #ffffff;
	background: #66ccff;
	border-color: transparent;
}

.btn-main:hover {
	color: #66ccff;
	background: transparent;
	border-color: #66ccff;
}

.btn-default {
	margin-right: 12px;
}

.btn-default:hover {
	background: #ffffff;
	color: #333333;
	border-color: transparent;
}

.btn-blocked { 
	opacity: 0.6;
	cursor: not-allowed;
}

.demo-navbtn {
	color: #66ccff;
	background: transparent;
	border-color: #66ccff;
	margin-left: 10px;
}

.demo-navbtn:hover {
	color: #ffffff;
	background: #66ccff;
	border-color: transparent;
}

.login-btn {
	color: #00de0b;
	background: transparent;
	border-color: #00de0b;
	margin-left: 10px;
}

.login-btn:hover {
	background: #00de0b;
	border-color: transparent;
	color: #ffffff;	
}

#intro .btn, #products .btn, #ptnrTypes .btn,
#pulsHero .btn, #plsPerksTop .btn, #plsPerksBtm .btn, 
#benHero .btn, #benFtrs .btn, footer .btn {
	padding: 20px 20px;
}

#intro .btn, #products .btn, #ptnrTypes .btn,
#pulsHero .btn, #plsPerksTop .btn, #plsPerksBtm .btn,
#benHero .btn, #benFtrs .btn {
	margin-top: 42px;
}

.parallax-section {
  background-attachment: fixed !important;
  background-size: cover !important;
}

/* Vertical centering for Bootstrap 3 rows */
.vcenter {
	display: inline-block;
	vertical-align: middle;
	float: none;
}
/*---------------------------------------
    Preloader section              
-----------------------------------------*/
.preloader {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 99999;
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-items: center;
  background: none repeat scroll 0 0 #ffffff;
}

.sk-rotating-plane {
  width: 50px;
  height: 50px;
  background-color: #222;
  -webkit-animation: sk-rotatePlane 1.2s infinite ease-in-out;
          animation: sk-rotatePlane 1.2s infinite ease-in-out; }

@-webkit-keyframes sk-rotatePlane {
  0% {
    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg);
            transform: perspective(120px) rotateX(0deg) rotateY(0deg); }
  50% {
    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
            transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg); }
  100% {
    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
            transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg); } }

@keyframes sk-rotatePlane {
  0% {
    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg);
            transform: perspective(120px) rotateX(0deg) rotateY(0deg); }
  50% {
    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
            transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg); }
  100% {
    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
            transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg); } }



/*---------------------------------------
    Navigation Links section              
-----------------------------------------*/
.custom-navbar {
	margin-bottom: 0;
	background-color: #101010;
	max-height: 100%;
}

/* Controls nav styles upon collapse (which is now permanent) */
.custom-navbar.top-nav-collapse {
	background: #101010;
	box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
	padding: 0;
}

.custom-navbar .navbar-brand {
	height: auto;
	width: auto;
	max-height: 70px;
	max-width: 400px;
	line-height: 35px; 
	vertical-align: middle;
}

.custom-navbar .nav li a { 
	color: #66ccff;
}

.custom-navbar .nav li a,
.custom-navbar .nav li button {
	font-size: 16px;
	font-weight: 700;
	letter-spacing: 0.6px;
	text-transform: uppercase;
	line-height: 40px;
	transition: all 0.4s ease-in-out;
}

.custom-navbar .nav li a:hover {
    background: transparent;
    color: #00de0b;
}

.custom-navbar .navbar-nav > li > a:hover,
.custom-navbar .navbar-nav > li > a:focus {
	background-color: transparent;
}


	
/*.custom-navbar .nav li.active > a {
	background-color: transparent;
	color: #00de0b;
}*/

/*.active {
	color: #00de0b;
	text-decoration: underline;
}*/

.custom-navbar .navbar-toggle {
	color: #ddd;
	border: none;
	padding-top: 20px;
}

.custom-navbar .navbar-toggle {
	background-color: transparent;
}

.custom-navbar .navbar-toggle .icon-bar {
    background: #ffffff;
    border-color: transparent;
}
/* ... */

